--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,5 +1,6 @@
 FROM ghcr.io/gem5/gem5-all-min-dependencies:v23-1
 
 RUN apt update -y
-RUN apt install -y python3-pip 
-RUN apt install -y git
+RUN apt install -y python3-pip git
+RUN apt install -y gcc-riscv64-linux-gnu
+RUN apt install -y g++-riscv64-linux-gnu
